Commander Genius Release :
==========================

v0.3.2.2:
---------
- Even better Sound support

v0.3.2.1:
---------
- more AI fixes
- Added support for mods which use the palette patch code
- 48 Khz is back again, after many months, but this time working correctly!
- better push and bump physics
- more of the Galaxy Engine. Keen now can walk on map.
- Added Cannon fire sound
- Added HUD Display, the one Chad had suggested
- Small memory issues fixed
- Improved memory management for foes.
- Keen 4 now works and can be played on map
- even faster and more Badass!

v0.3.2:
---------
- OpenGL improvements especially for iPhone!!
- Faster Game loads!
- Other segfault fixes!!
- Improved Mod support (Especially for Keen X and Yorphius II)
- Now HQ Sprites are supported!
- faster loading maps algorithm and less memory used
- more Galaxy Code!
- Code cleanups!
- Improved Patch-Code
- Improved Garg AI
- Improved Scrub AI
- Teleporter fixes
- Now enemies blink, when they get a hit
- Small improvement of the player physics
- New configuration file parser which makes loading and saving even faster!

v0.3.1.3:
---------
- Savegames are now separated per game
- bit more galaxy code
- fixed filename search problems
- even faster and more colourful menu

v0.3.1.2:
---------
- a bit faster and more colourful menu

v0.3.1.1:
---------
- Volume sliders
- Camera bounds config
- Older savegame compatibility... (to version 0.3.0.4)

v0.3.1.0:
---------

01-03-2010
- Most of the bugs reported on Trac have been fixed.
- We have finally another release!

31-01-2010
- Improved Bump function, which makes Keen push, when touched by a yorp a similar foe
- Imrpoved the yorp behaviour, when Keen touches him. It should be like in the original also.  
- Scrubs got stuck when walking over just one tile. fixed...
- Changes in the Voritcon Elite. It should be like in the original now. Please verify!
- Changes in the Tank Robot AI Ep 1

19-01-2010
- Changes in the Vortininja Ep3