@@ -189,7 +189,11 @@ IF (OGG)
 ENDIF (OGG)
 
 IF (TREMOR)
-	INCLUDE_DIRECTORIES(/usr/include/tremor)
+	IF(BUILD_TYPE STREQUAL DINGOO)
+		INCLUDE_DIRECTORIES(${PREFIX}/include/tremor)
+	ELSE (BUILD_TYPE STREQUAL DINGOO)
+		INCLUDE_DIRECTORIES(/usr/include/tremor)
+	ENDIF (BUILD_TYPE STREQUAL DINGOO)
 	ADD_DEFINITIONS(-DTREMOR)
 	SET(ALL_SRCS ${ALL_SRCS} ${VORBIS_S})
 ENDIF (TREMOR)
